--- a/index.html
+++ b/index.html
@@ -6,23 +6,36 @@
     <title></title>
   </head>
   <body>
-    <div class="add-thread-section">
-
-    </div>
     <div class="nav-section">
+      <div class="add-thread-section">
+        <form action="index.html" method="post">
+          <button type="button" name="button" class="button-style">ask question</button>
+        </form>
+      </div>
       <div class="search-section">
-
+        <form class="nav-form-section" action="index.html" method="post">
+          <input type="text" name="" value="" class="input-style">
+          <button type="button" name="button" class="button-style">search</button>
+        </form>
       </div>
       <div class="right-nav-section">
-
+        <h2 class="trending-p">trending</h2>
       </div>
     </div>
     <div class="content-section">
       <div class="left-thread-section">
-
+        <h1>Threads</h1>
+        <div class="thread-display-section">
+          <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
+          <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen wenn ich aber sachen sehe die ich nicht will dann bin ich sehr laut und kann schnell komischen mist erzählen</p>
+        </div>
+        <div class="thread-display-section">
+          <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
+          <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen</p>
+        </div>
       </div>
       <div class="right-thread-section">
-
+        some stuff people talk about with their friends or so i guess
       </div>
     </div>
   </body>
