--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="nav-section">
       <div class="add-thread-section">
         <form action="index.html" method="post">
-          <button type="button" name="button" class="button-style">ask question</button>
+          <button type="button" name="button" class="button-style" onclick = askQuestionSite()>ask question</button>
         </form>
       </div>
       <div class="search-section">
@@ -35,8 +35,13 @@
         </div>
       </div>
       <div class="right-thread-section">
-        some stuff people talk about with their friends or so i guess
+        <a href="#" class="trending-head-a">Kühe unter dem wasser warum? Wie kann das so viel essen sein wenn ich esse ohne zu kauen</a>
+        <a href="#" class="trending-head-a">Essen auf dem tisch</a>
+        <a href="#" class="trending-head-a">Schüssel verrückt</a>
       </div>
     </div>
+    <script type="text/javascript" src="js/main.js">
+
+    </script>
   </body>
 </html>
