--- a/ask_question/ask.html
+++ b/ask_question/ask.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>ask question</title>
   </head>
   <body>
-    <h1>ello sir</h1>
+    <h1>ask question</h1>
+    <div class="question-form-div">
+      <form class="question-form-section" action="index.html" method="post">
+        <input type="text" name="" value="">
+        <textarea name="name" rows="8" cols="80"></textarea>
+        <button type="button" name="button">ask</button>
+      </form>
+    </div>
   </body>
 </html>
