--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
     </div>
     <div class="content-section">
       <div class="left-thread-section">
+        <h1>Das aussterben der Kühe </h1>
+        <div class="thread-display-section">
+          <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
+          <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen wenn ich aber sachen sehe die ich nicht will dann bin ich sehr laut und kann schnell komischen mist erzählen</p>
+        </div>
+        <div class="comment-form-section">
+          <h2>your comment</h2>
+          <form class="comment-form-form" action="index.html" method="post">
+            <input type="text" name="" value="" placeholder="head">
+            <textarea name="name" rows="8" cols="80" placeholder="your comment"></textarea>
+            <button type="button" name="button">send</button>
+          </form>
+        </div>
+        <div class="thread-display-section">
+          <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
+          <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen</p>
+        </div>
+      </div>
+      <!-- <div class="left-thread-section">
         <h1>Threads</h1>
         <div class="thread-display-section">
           <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
@@ -33,7 +52,7 @@
           <a href="#" class="thread-head-a">Das aussterben der Kühe</a>
           <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen</p>
         </div>
-      </div>
+      </div> -->
       <div class="right-thread-section">
         <a href="#" class="trending-head-a">Kühe unter dem wasser warum? Wie kann das so viel essen sein wenn ich esse ohne zu kauen</a>
         <a href="#" class="trending-head-a">Essen auf dem tisch</a>
