--- a/ask_question/ask.html
+++ b/ask_question/ask.html
@@ -8,9 +8,9 @@
   <body>
     <h1>ask question</h1>
     <div class="question-form-div">
-      <form class="question-form-section" action="index.html" method="post">
-        <input type="text" name="" value="">
-        <textarea name="name" rows="8" cols="80"></textarea>
+      <form class="question-form-section" action="php/new_thread.php" method="post">
+        <input type="text" name="topic" value="" >
+        <textarea name="content" rows="8" cols="80"></textarea>
         <button type="button" name="button">ask</button>
       </form>
     </div>
