--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <div class="nav-section">
       <div class="add-thread-section">
-        <form action="index.html" method="post">
-          <button type="button" name="button" class="button-style" onclick = askQuestionSite()>ask question</button>
-        </form>
+        <button type="button" name="button" class="button-style" onclick = askQuestionSite()>ask question</button>
       </div>
       <div class="search-section">
         <form class="nav-form-section" action="index.html" method="post">
@@ -31,7 +29,7 @@
         </div>
         <div class="comment-form-section">
           <h2>your comment</h2>
-          <form class="comment-form-form" action="index.html" method="post">
+          <form class="comment-form-form" action="php/comment.php" method="post">
             <input type="text" name="" value="" placeholder="head">
             <textarea name="name" rows="8" cols="80" placeholder="your comment"></textarea>
             <button type="button" name="button">send</button>
