--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           <p>hallo ich habe gehört dass Kühe fliegen können wenn sie richtig sauer sind und dann sind sie schnell im gras beim essen wenn ich aber sachen sehe die ich nicht will dann bin ich sehr laut und kann schnell komischen mist erzählen</p>
         </div>
         <div class="comment-form-section">
-          <h2>your comment</h2>
+          <h2 id="comment-head-section">your comment</h2>
+          <p id="thread-id">4902384902384892034829034890238904823908</p>
           <form class="comment-form-form" action="php/comment.php" method="post">
             <input type="text" name="" value="" placeholder="head">
             <textarea name="name" rows="8" cols="80" placeholder="your comment"></textarea>
