--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
       </div> -->
       <div class="right-thread-section">
-        <a href="#" class="trending-head-a">Kühe unter dem wasser warum? Wie kann das so viel essen sein wenn ich esse ohne zu kauen</a>
-        <a href="#" class="trending-head-a">Essen auf dem tisch</a>
+        <a href="this-link-is-generated-by-the-php" class="trending-head-a">Kühe unter dem wasser warum? Wie kann das so viel essen sein wenn ich esse ohne zu kauen</a>
+        <a href="it-links-to-the-corresponding-page" class="trending-head-a">Essen auf dem tisch</a>
         <a href="#" class="trending-head-a">Schüssel verrückt</a>
       </div>
     </div>
